Fix constraint issue in CandidateCell by using 999 as priority

--- a/Taylr/Base.lproj/Main.storyboard
+++ b/Taylr/Base.lproj/Main.storyboard
@@ -2562,18 +2562,24 @@ While you are in the conversation though you can replay videos you just watched 
                                                     <fontDescription key="fontDescription" name="Cabin-Medium" family="Cabin" pointSize="14"/>
                                                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                                     <nil key="highlightedColor"/>
+                                                    <userDefinedRuntimeAttributes>
+                                                        <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="Date"/>
+                                                    </userDefinedRuntimeAttributes>
                                                 </label>
-                                                <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="7Sz-yE-g2H" userLabel="Card">
-                                                    <rect key="frame" x="0.0" y="25" width="180" height="303"/>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7Sz-yE-g2H" userLabel="Card">
+                                                    <rect key="frame" x="0.0" y="25" width="180" height="304"/>
                                                     <subviews>
                                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" horizontalCompressionResistancePriority="747" verticalCompressionResistancePriority="747" image="empty-profile-pic" translatesAutoresizingMaskIntoConstraints="NO" id="7Pt-WV-qjy" userLabel="Avatar">
                                                             <rect key="frame" x="0.0" y="0.0" width="180" height="205.5"/>
+                                                            <userDefinedRuntimeAttributes>
+                                                                <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="Avatar"/>
+                                                            </userDefinedRuntimeAttributes>
                                                         </imageView>
                                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vG2-be-Sfa" userLabel="Name Background">
-                                                            <rect key="frame" x="0.0" y="165" width="180" height="40"/>
+                                                            <rect key="frame" x="0.0" y="171" width="180" height="34"/>
                                                             <subviews>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Taylor Swift '12" lineBreakMode="middleTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.80000000000000004" translatesAutoresizingMaskIntoConstraints="NO" id="Zc6-Vy-MOX" userLabel="Name">
-                                                                    <rect key="frame" x="8" y="10" width="164" height="19.5"/>
+                                                                    <rect key="frame" x="8" y="7" width="164" height="19.5"/>
                                                                     <fontDescription key="fontDescription" name="Cabin-Medium" family="Cabin" pointSize="16"/>
                                                                     <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                                     <nil key="highlightedColor"/>
@@ -2581,7 +2587,7 @@ While you are in the conversation though you can replay videos you just watched 
                                                             </subviews>
                                                             <color key="backgroundColor" white="0.0" alpha="0.5" colorSpace="calibratedWhite"/>
                                                             <constraints>
-                                                                <constraint firstAttribute="height" constant="40" id="1C1-Uq-GmF"/>
+                                                                <constraint firstAttribute="height" constant="34" id="1C1-Uq-GmF"/>
                                                                 <constraint firstItem="Zc6-Vy-MOX" firstAttribute="leading" secondItem="vG2-be-Sfa" secondAttribute="leading" constant="8" id="KtC-cp-XCC"/>
                                                                 <constraint firstAttribute="centerY" secondItem="Zc6-Vy-MOX" secondAttribute="centerY" id="cdu-XX-7ar"/>
                                                                 <constraint firstAttribute="trailing" secondItem="Zc6-Vy-MOX" secondAttribute="trailing" constant="8" id="tIi-66-Ns7"/>
@@ -2592,6 +2598,9 @@ While you are in the conversation though you can replay videos you just watched 
                                                             <fontDescription key="fontDescription" name="Cabin-Italic" family="Cabin" pointSize="14"/>
                                                             <color key="textColor" red="0.29016065600000002" green="0.2902165055" blue="0.29015710950000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                             <nil key="highlightedColor"/>
+                                                            <userDefinedRuntimeAttributes>
+                                                                <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="Reason"/>
+                                                            </userDefinedRuntimeAttributes>
                                                         </label>
                                                         <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" verticalHuggingPriority="252" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="S1n-th-08H">
                                                             <rect key="frame" x="8" y="274" width="164" height="22"/>
@@ -2632,6 +2641,9 @@ While you are in the conversation though you can replay videos you just watched 
                                                                     </connections>
                                                                 </collectionViewCell>
                                                             </cells>
+                                                            <userDefinedRuntimeAttributes>
+                                                                <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="Services"/>
+                                                            </userDefinedRuntimeAttributes>
                                                         </collectionView>
                                                     </subviews>
                                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -2654,6 +2666,7 @@ While you are in the conversation though you can replay videos you just watched 
                                                         <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
                                                             <real key="value" value="3"/>
                                                         </userDefinedRuntimeAttribute>
+                                                        <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="Card"/>
                                                     </userDefinedRuntimeAttributes>
                                                 </view>
                                             </subviews>
@@ -2662,13 +2675,16 @@ While you are in the conversation though you can replay videos you just watched 
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                         <constraints>
                                             <constraint firstItem="Mvu-qj-0XV" firstAttribute="top" secondItem="acQ-2W-WOL" secondAttribute="top" id="2e9-oL-wbo"/>
-                                            <constraint firstAttribute="bottom" secondItem="7Sz-yE-g2H" secondAttribute="bottom" id="45r-jC-JE9"/>
+                                            <constraint firstAttribute="bottom" secondItem="7Sz-yE-g2H" secondAttribute="bottom" priority="999" id="45r-jC-JE9"/>
                                             <constraint firstAttribute="trailing" secondItem="7Sz-yE-g2H" secondAttribute="trailing" id="Sof-0y-uOd"/>
                                             <constraint firstItem="7Sz-yE-g2H" firstAttribute="top" secondItem="Mvu-qj-0XV" secondAttribute="bottom" constant="8" symbolic="YES" id="WEm-PZ-zrm"/>
                                             <constraint firstItem="7Sz-yE-g2H" firstAttribute="leading" secondItem="acQ-2W-WOL" secondAttribute="leading" id="X4K-Qj-6jG"/>
                                             <constraint firstItem="Mvu-qj-0XV" firstAttribute="leading" secondItem="acQ-2W-WOL" secondAttribute="leading" id="dnA-Do-ynS"/>
                                         </constraints>
                                         <size key="customSize" width="180" height="329"/>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="CandidateCell"/>
+                                        </userDefinedRuntimeAttributes>
                                         <connections>
                                             <outlet property="avatarView" destination="7Pt-WV-qjy" id="Esg-Nb-vqb"/>
                                             <outlet property="dateLabel" destination="Mvu-qj-0XV" id="aAR-0G-JXP"/>
@@ -2732,7 +2748,7 @@ While you are in the conversation though you can replay videos you just watched 
         <image name="sample-photo" width="1242" height="660"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="Fwv-Pj-RXP"/>
         <segue reference="33G-iq-iGB"/>
+        <segue reference="1xM-N2-wS8"/>
     </inferredMetricsTieBreakers>
 </document>
